--- a/client/src/pages/Landing/style.css
+++ b/client/src/pages/Landing/style.css
@@ -21,9 +21,10 @@ padding-top: 100px;
 .hero{
   margin-top: 100px ;
   width: 100%;
-  height: 386px;
+  height: 500px;
   background-image: url('../../assets/breadcrumb-bg.jpg');
   background-position: right;
+  background-size: cover;
 }
 .hero-container{
   height: 100%;
@@ -99,6 +100,7 @@ padding-top: 100px;
 }
 .popular-categories .categories .category .category-img{
   width: 200px;
+  height: 200px;
 }
 .popular-categories .categories .category .category-title{
   padding-left: 5px;
