--- a/client/src/components/TextEditor/style.css
+++ b/client/src/components/TextEditor/style.css
@@ -1,10 +1,27 @@
 .text-editor-container{
-  width: 600px;
+  width: 100%;
 }
 .text-editor{
-  border-radius: 8px;
-   height: 300px;
-   box-shadow: 10px 10px 12px -5px rgba(0,0,0,0.29);
--webkit-box-shadow: 10px 10px 12px -5px rgba(0,0,0,0.29);
--moz-box-shadow: 10px 10px 12px -5px rgba(0,0,0,0.29);
+  height: 300px;
+  border-radius: 4px;
+}
+.text-editor.error .ql-container.ql-snow{
+  border: 1px solid #d32f2f !important;
+  color: #d32f2f;
+} 
+.text-editor.error .ql-toolbar.ql-snow{
+  border: 1px solid #d32f2f !important;
+  border-bottom-color: #eee !important;
+  }
+.ql-container.ql-snow {
+  height: 260px;
+  border: 1px solid #ccc;
+}
+.ql-toolbar.ql-snow{
+border-top-left-radius: 4px;
+border-top-right-radius: 4px;
+}
+.ql-container.ql-snow {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
