feat: edit files jobs components

--- a/client/src/components/filter/style.css
+++ b/client/src/components/filter/style.css
@@ -1,8 +1,8 @@
-.container{
+/* .container{
   width: 250px;
   min-Height: 400px;
   position: relative;
-}
+} */
 .sideBar{
   position: absolute;
   right: 150px;
