--- a/client/src/components/jobDetails/style.css
+++ b/client/src/components/jobDetails/style.css
@@ -1,8 +1,6 @@
 .wrapper{
   display: flex;
   justify-content: space-between;
-  padding-left: 7px;
-  padding-right: 7px;
 }
 .details ,.about{
   display: flex;
@@ -10,6 +8,7 @@
   border:0.3px solid #424B5A;
   border-radius: 7px;
   overflow: hidden;
+  height: 320px;
 }
 .details{
   width: 60%;
@@ -24,16 +23,24 @@
 .top h2{
   padding: 27px;
   color:#1C3879;
+  font-size: 20px;
 }
 .content{
   padding: 0px 2rem;
   display: flex;
   flex-direction: column;
-  gap: 80px;
 }
 .content p{
   margin-top: 20px;
+}
 
+.jobs-details{
+  display: flex;
+  gap: 15px;
+}
+.jobs-details span{
+  color:#1C3879;
+  padding: 0 7px;
 }
 
 .about{
