--- a/client/src/components/addJobForm/style.css
+++ b/client/src/components/addJobForm/style.css
@@ -1,8 +1,34 @@
 .job-from{
-  width: 40%;
+  width: 35%;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
-  padding: 2rem;
+  gap: .8rem;
+  padding: 3rem;
   background-color: #EEEEEE;
+  margin: 0 auto;
+  position: relative;
+  margin-top: 2.3rem;
+  border-radius: 7px;
+}
+.job-popup{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  /* background-color: white; */
+  /* visibility: hidden; */
+}
+.close-icon{
+  position: absolute;
+  right: 13px;
+  top: 13px;
+  color: #132754;
+}
+
+.close-icon:hover{
+  color: #D32F2F;
+  cursor: pointer;
+}
+.text-filed div input ,.text-area div , .text-select div{
+  background-color: white;
 }
