--- a/client/src/components/tab/style.css
+++ b/client/src/components/tab/style.css
@@ -4,3 +4,12 @@
   border-radius: 8px;
   margin-left: 10rem;
 }
+.searrchInput{
+  width: 100%;
+ display: flex;
+ justify-content: center;
+ margin-bottom: 30px;
+}
+.searchInputHomePage{
+  width: 450px;
+}
