--- a/client/src/components/FreelancerInfoCard/style.css
+++ b/client/src/components/FreelancerInfoCard/style.css
@@ -1,14 +1,16 @@
 .freelancer-info-card{
   width: 100%;
+  margin: 2rem 0;
 }
 .freelancer-info-card-img{
   height: 100%;
   width: 100%;
   text-align: center;
 }
-.freelancer-info-card-img img{
+.freelancer-info-card img{
+  width: 100%;
+  max-width: 380px;
   border-radius: 4px;
-  width: 70%;
 }
 
 .freelancer-info-card-content{
@@ -16,23 +18,24 @@
   height: 100%;
 }
 .freelancer-info-card-content h3{
-font-size: 28px;
+font-size: 34px;
 color: #1C3879;
 margin: 0;
 }
 .freelancer-info-card-content p.freelancer-major{
-font-size: 17px;
-color: #3F4444;
+font-size: 20px;
+color: #565b5b;
 margin: 5px 0;
 font-weight: 600;
 }
 .freelancer-info-card-content p.freelancer-brief{
-font-size: 14px;
+font-size: 18px;
 color: #3F4444;
 margin-top: 2rem;
 font-weight: 400;
 }
 .freelancer-info-card-content p.freelancer-portfolio{
-margin-top: 2rem;
+  font-size: 16px;
+margin-top: 1rem;
 font-weight: 600;
 }
