--- a/client/src/components/jobCard/style.css
+++ b/client/src/components/jobCard/style.css
@@ -19,8 +19,12 @@
   margin-top: 1.5rem;
   color: #1E1E1E;
 }
-.budget-proposal-section div{
-  display: inline-block;
+.budget-proposal-section{
+  display: flex;
+  width: 700px;
+  align-items: center;
+  /* background-color: red; */
+  justify-content: space-between;
 }
 .budget{
   margin-left: 4rem;
@@ -33,4 +37,12 @@
 }
 .content{
   padding: 0px 2rem;
+}
+.second-section .Mui-disabled{
+  background-color: #fff !important;
+  opacity: 1 !important;
+}
+.budget-proposal-client{
+  justify-content: flex-start;
+  gap: 2rem;
 }
