--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,7 +9,9 @@
 .container {
     margin: 0px 7rem;
 }
-
+body{
+    padding-top: 75px;
+}
 @media screen and (min-width: 1800px) {
     .container {
         max-width: 1500px;
