--- a/client/src/components/signup/style.css
+++ b/client/src/components/signup/style.css
@@ -1,8 +1,8 @@
-form{
+.signup-form-1{
   margin-top: 1rem;
   margin-bottom: 2rem;
 }
-h3{
+.header-signup-1{
   color: #1C3879;
   margin-top: 2rem;
 }
@@ -12,7 +12,7 @@ h3{
   margin: 0 auto;
 }
 
-form .form-input label{
+.signup-form-1 .form-input label{
       width: 50%;
       display: flr;
       display: flex;
