--- a/client/src/components/FreelancerInfoCard/style.css
+++ b/client/src/components/FreelancerInfoCard/style.css
@@ -10,7 +10,7 @@
 }
 .freelancer-info-card img{
   width: 100%;
-  max-width: 380px;
+  max-width: 300px;
   border-radius: 4px;
 }
 
@@ -34,6 +34,7 @@ font-size: 18px;
 color: #3F4444;
 margin-top: 2rem;
 font-weight: 400;
+width: 474px;
 }
 .freelancer-info-card-content p.freelancer-portfolio{
   font-size: 16px;
