fix: separate the freelancer step in different file relates #118

--- a/client/src/components/signup/style.css
+++ b/client/src/components/signup/style.css
@@ -45,3 +45,9 @@
   justify-content: space-between;
   align-items: center;
 }
+.UploadImageHolder{
+  min-height: 65px;
+   display: flex;
+  flex-direction: column; 
+    width: 80%;
+}
