--- a/client/src/components/addJobForm/style.css
+++ b/client/src/components/addJobForm/style.css
@@ -2,12 +2,13 @@
   width: 35%;
   display: flex;
   flex-direction: column;
-  gap: .8rem;
-  padding: 3rem;
+  /* gap: .8rem; */
+  height: fit-content;
+  padding: 2.5rem;
   background-color: #EEEEEE;
-  margin: 0 auto;
+  margin:auto;
   position: relative;
-  margin-top: 2.3rem;
+  margin-top: 1rem;
   border-radius: 7px;
 }
 .close-icon{
