--- a/client/src/components/footer/style.css
+++ b/client/src/components/footer/style.css
@@ -31,9 +31,11 @@ footer{
   font-weight: 400;
   font-size: 19px;
 }
-li{
+.footer-bar li{
   list-style: none;
   margin: 6px 0;
+  display: flex;
+  align-items: center;
 }
 ul li a{
 color: rgb(64, 64, 64); 
