--- a/client/src/pages/Signup/style.css
+++ b/client/src/pages/Signup/style.css
@@ -1,13 +1,13 @@
-.css-m5vj9m-MuiStepper-root{
+.signup-page .css-m5vj9m-MuiStepper-root{
   width: 45%;
   margin: 0 auto;
 }
 
-.css-2royc9 {
+.signup-page .css-2royc9 {
   width: 45%;
   margin: 0 auto;
 }
 
-.css-0 {
+.signup-page .css-0 {
   padding: 4rem 0px;
 }
