fix: fix steper style

--- a/client/src/components/signup/style.css
+++ b/client/src/components/signup/style.css
@@ -62,3 +62,7 @@
   margin: 0 !important;
   width: 100% !important;
 }
+.signup-page .css-u4p24i {
+  margin: 0 auto !important;
+  width: 45% !important;
+}
