--- a/client/src/pages/Landing/style.css
+++ b/client/src/pages/Landing/style.css
@@ -1,5 +1,5 @@
 #header{
-padding-top: 120px;
+padding-top: 60px;
 }
 a{
   text-decoration: none;
@@ -114,6 +114,7 @@ a{
 .popular-categories .categories .category .category-desc{
   margin-top: .8rem;
   padding-left: 5px;
+  height: 85px;
   font-size: 14px;
   color: #A1AEB7;
   font-weight: 400;
