--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -62,21 +62,19 @@
   max-height: 600px !important;
 }
 .notification-list .notification{
-  max-width: 400px !important;
+  min-width: 400px !important;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   gap: 10px;
-padding: 1rem;
-width: 100%;
-border-bottom: 1px solid #ccc;
-transition: all .4s ease;
+  padding: 1rem;
+  border-bottom: 1px solid #ccc;
+  transition: all .4s ease;
 
 }
 .notification-list .notification:hover{
 background-color: #eee;
-
 }
 .notification-list .notification p{
 width: 90%;
