--- a/client/src/pages/PageNotFound/style.css
+++ b/client/src/pages/PageNotFound/style.css
@@ -1,9 +1,17 @@
-.title {
-  font-size: 150px;
-  margin: 50px 0 30px;
-}
 
 .description {
   font-size: 20px;
-  padding-right: 100px;
+  width: 50%;
+  text-align: center;
+  margin-top: 15px;
+}
+.error-container{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.not-found-err{
+  width: 50%;
+  margin-top: -10rem;
 }
