--- a/client/src/components/jobCard/style.css
+++ b/client/src/components/jobCard/style.css
@@ -34,6 +34,11 @@
 }
 .description{
   margin-bottom: 10px;
+  width: 100% !important;
+  text-align: left !important;
+}
+.description p{
+  font-size: 17px !important;
 }
 .content{
   padding: 0px 2rem;
